add section feedback

--- a/index.html
+++ b/index.html
@@ -168,6 +168,32 @@
                     </div>
                 </div>
             </section>
+            <section class="feedback">
+                <div class="feedback__wrap">
+                    <h2 class="section-title">What our client say</h2>
+                    <button class="btn feedback__btn">View All</button>
+                </div>
+                <div class="reviews">
+                    <div class="reviews-item">
+                        <img class="reviews-item__img" src="./assets/images/reviews/reviews-1.png" alt="photo">
+                        <p class="reviews-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit Ultrices.</p>
+                        <div class="reviews-item__author">David lee</div>
+                        <a class="reviews-item__link" href="#">davidlee@</a>
+                    </div>
+                    <div class="reviews-item">
+                        <img class="reviews-item__img" src="./assets/images/reviews/reviews-2.png" alt="photo">
+                        <p class="reviews-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit Ultrices.</p>
+                        <div class="reviews-item__author">Ravi shankor</div>
+                        <a class="reviews-item__link" href="#">ravishankor@</a>
+                    </div>
+                    <div class="reviews-item">
+                        <img class="reviews-item__img" src="./assets/images/reviews/reviews-3.png" alt="photo">
+                        <p class="reviews-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit Ultrices.</p>
+                        <div class="reviews-item__author">Thomas lew</div>
+                        <a class="reviews-item__link" href="#">thomaslew@</a>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
