add section in touch

--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
                     </div>
                 </div>
             </section>
+            <section class="in-touch">
+                <h3 class="in-touch__subtitle">STAY IN TOUCH</h3>
+                <h2 class="in-touch__title section-title">Join our email. First to know about specials,events and more!</h2>
+                <form action="#" class="in-touch__form form-email form">
+                    <label class="form-email__label">
+                        <input class="form-email__field input" type="text" placeholder="Enter your email address">
+                    </label>
+                    <button class="btn form-btn">Subscribe</button>
+                </form>
+            </section>
         </div>
     </main>
 </body>
