--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
     <header class="header">
         <div class="container header__container">
-            <img class="header__logo logo" src="./assets/images/logo.png" alt="logo">
+            <a class="header__logo logo" href="#">
+                <img class="logo__img" src="./assets/images/logo.png" alt="logo">
+            </a>
             <nav class="header__nav nav">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -206,5 +208,77 @@
             </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__wrap">
+                <a class="footer__logo logo" href="#">
+                    <img class="logo__img" src="./assets/images/logo.png" alt="logo">
+                </a>
+                <p class="footer__text">
+                    Travel deals on hotels, flights, vacation packages.
+                </p>
+                <a class="footer__link email-link" href="mailto:@shovasatkhira88.com">@shovasatkhira88.com</a>
+                <ul class="footer__social social">
+                    <li class="social__item">
+                        <a class="social__link" href="https://www.facebook.com/" target="_blank">
+                            <img class="social__icon" src="./assets/images/social/social-1.svg" alt="facebook">
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="https://www.instagram.com/" target="_blank">
+                            <img class="social__icon" src="./assets/images/social/social-2.svg" alt="instagram">
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="https://twitter.com/" target="_blank">
+                            <img class="social__icon" src="./assets/images/social/social-3.svg" alt="twitter">
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="https://www.google.com/" target="_blank">
+                            <img class="social__icon" src="./assets/images/social/social-4.svg" alt="google">
+                         </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__wrap">
+                <h3 class="footer__title">Home</h3>
+                <ul class="footer__list footer-list">
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Accessibility</a>
+                    </li>
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Lertifiotion</a>
+                    </li>
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Knowledge</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__wrap">
+                <h3 class="footer__title">Pages</h3>
+                <ul class="footer__list footer-list">
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Blogs</a>
+                    </li>
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Careers</a>
+                    </li>
+                    <li class="footer-list__item">
+                        <a class="footer-list__link" href="#">Communing</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__wrap">
+                <h3 class="footer__title">SUBSCRIBE</h3>
+                <form action="#" class="footer__form form-email form">
+                    <label class="form-email__label">
+                        <input class="form-email__field input" type="text" placeholder="Enter your email address">
+                    </label>
+                    <button class="btn form-btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
