--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav__link" href="#">Gallary</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="#">Gallary</a>
+                        <a class="nav__link" href="#">Testimonials</a>
                     </li>
                 </ul>
             </nav>
