--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rayal Park</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./assets/css/normalize.css">
@@ -74,10 +74,10 @@
         </section>
         <div class="container">
             <section class="holidays">
-                <div class="holidays-images">
-                    <img class="holidays-main-img" src="./assets/images/holidays/holidays-main.jpg" alt="holidays">
-                    <img class="holidays-add-img" src="./assets/images/holidays/holidays-secondary.jpg" alt="holidays">
-                    <img class="holidays-sprite-img" src="./assets/images/holidays/holidays-sprite.jpg" alt="holidays">
+                <div class="holidays__images images-hotel">
+                    <img class="images-hotel__main" src="./assets/images/holidays/holidays-main.jpg" alt="holidays">
+                    <img class="images-hotel__sec" src="./assets/images/holidays/holidays-secondary.jpg" alt="holidays">
+                    <img class="images-hotel__sprite" src="./assets/images/holidays/holidays-sprite.jpg" alt="holidays">
                 </div>
                 <div class="holidays__info">
                     <h3 class="subtitle">dream holidays</h3>
