--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <body>
     <header class="header">
         <div class="container header__container">
+            <button class="burger-menu">
+                <span class="burger-menu__line"></span>
+            </button>
             <a class="header__logo logo" href="#">
                 <img class="logo__img" src="./assets/images/logo.png" alt="logo">
             </a>
